# rubbish

./: .env.docker  .gitignore  README.md  docker-compose.yml  run.ps1  runtests.ps1
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agentdef/: loader.py
backend/app/autoplan/: detector.py
backend/app/config/: __init__.py  schema.py  store.py
backend/app/core/: agent.py  background.py  emitter.py  gateway.py  stormbreaker.py
backend/app/headroom/: router.py
backend/app/llm/: anthropic.py  base.py  cache_alignment.py  composer.py  fallback.py  openai_compat.py  router.py
backend/app/mcp/: manager.py
backend/app/session/: checkpoint.py  compactor.py  microcompact.py  session.py
backend/app/skills/: loader.py
backend/app/tools/: compute_client.py  executor.py  offload.py  registry.py
backend/app/workspace/: __init__.py  routes.py
backend/tests/: test_agent.py  test_agent_e2e.py  test_agentdef.py  test_autoplan.py  test_background.py  test_checkpoint_file.py  test_composer.py  test_compute_client.py  test_config.py  test_emitter.py  test_gateway.py  test_headroom.py  test_integration_compute.py  test_llm.py  test_mcp.py  test_microcompact.py  test_session.py  test_skills.py  test_stormbreaker.py  test_tools.py
compute-node/: Cargo.toml  Dockerfile
compute-node/src/: lib.rs  main.rs
compute-node/src/api/: mod.rs
compute-node/src/codegraph/: graph.rs  impact.rs  mod.rs  parser.rs  routers.rs  search.rs
compute-node/tests/: api_test.rs  codegraph_test.rs  smart_crusher_test.rs
docs/: API.md  (+5 more)
(+41 files in other folders)
