[project]
name = "rubbish-backend"
version = "0.1.0"
description = "Firefly-RS Agent Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "openai>=2.43.0",
    "anthropic>=0.23.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.20.0",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "sse-starlette>=3.4.4",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: integration tests requiring Rust compute node subprocess",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
