[package]
name = "rubbish-compute"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.40.1", features = ["bundled"] }
# Regex-based parser (works without native tree-sitter libs)
regex = "1"
tower = { version = "0.5", features = ["util"] }
